# pico-kit-examples

./: CMakeLists.txt  README.md
hw_test/: CMakeLists.txt
hw_test/audio/: CMakeLists.txt
hw_test/audio/pcm_audio/: CMakeLists.txt  pcm_audio.c
hw_test/audio/piezo/: piezo.c
hw_test/audio/pwm_audio/: CMakeLists.txt  pwm_audio.c
hw_test/basic_ui/: CMakeLists.txt
hw_test/basic_ui/dac_buttons/: CMakeLists.txt  dac_buttons.c
hw_test/basic_ui/leds/: leds.c
hw_test/basic_ui/potentiometer/: CMakeLists.txt
hw_test/blink/: CMakeLists.txt  blink.c
hw_test/dac_buttons/: dac_buttons.c
hw_test/demo/: CMakeLists.txt  MCP23S018.cpp  MCP23S018.h  SPI.cpp  demo.cpp  ssd1306.h
hw_test/edid_info/: CMakeLists.txt  edid_info.c  edid_info.cpp
hw_test/hello_adc/: CMakeLists.txt  hello_adc.c
hw_test/i2c/: CMakeLists.txt
hw_test/i2c/edid_info/: edid_info.cpp
hw_test/i2c/eeprom/: AT24Cxx.cpp  AT24Cxx.h  CMakeLists.txt  eeprom.cpp
hw_test/i2c/oled/: CMakeLists.txt
hw_test/i2c/scan_i2c_bus/: CMakeLists.txt  scan_i2c_bus.c
hw_test/led_fade/: CMakeLists.txt  pwm_led_fade.c
hw_test/leds/: CMakeLists.txt  leds.c
hw_test/oled/: example.c
hw_test/pico_blink/: CMakeLists.txt
hw_test/piezo/: CMakeLists.txt  piezo.c
hw_test/quadrature_encoder/: CMakeLists.txt
hw_test/spi/: CMakeLists.txt
hw_test/spi/spi_expander/: CMakeLists.txt  spi_expander.cpp
hw_test/spi_expander/: CMakeLists.txt  MCP23S018.cpp  MCP23S018.h  SPI.cpp  SPI.h  spi_expander.cpp
hw_test/uart/: CMakeLists.txt
hw_test/uart/uart_loopback/: CMakeLists.txt  uart_loopback.c
oled/: CMakeLists.txt
